# -AST-Python-

./: .gitignore  License.txt  PyAnalyzer.docx  README.md  config.yaml  pyproject.toml  requirements.txt  run_analysis.py  setup.py
pyanalyzer/: _init_.py  cli.py
pyanalyzer/core/: _init_.py  ast_parser.py  call_graph.py  defect_detector.py  pattern_matcher.py  symbolic_executor.py
pyanalyzer/examples/example_project/: test_case.py  vulnerable_code.py
pyanalyzer/patterns/: _init_.py  base_patterns.py  performance_patterns.py  security_patterns.py
pyanalyzer/reporting/: console_reporter.py  html_reporter.py  json_reporter.py  visualizer.py
pyanalyzer/tests/: test_core.py
pyanalyzer/utils/: _init_.py  ast_utils.py  file_utils.py  metrics.py
reports/: analysis_data.json  analysis_report.html
reports/json/: analysis_report.json  summary.json
